Bug 1144418 - target events for text nodes in shadow dom to the nearest element in the flattened tree. r=wchen