dom/events/EventStateManager.cpp
@@ -488,7 +488,7 @@ EventStateManager::PreHandleEvent(nsPresContext* aPresContext,
   NS_WARN_IF_FALSE(!aTargetFrame ||
                    !aTargetFrame->GetContent() ||
                    aTargetFrame->GetContent() == aTargetContent ||
-                   aTargetFrame->GetContent()->GetParent() == aTargetContent,
+                   aTargetFrame->GetContent()->GetFlattenedTreeParent() == aTargetContent,
                    "aTargetFrame should be related with aTargetContent");
 
   mCurrentTarget = aTargetFrame;
